--- a/style/style.css
+++ b/style/style.css
@@ -39,7 +39,7 @@ background-position:center;
     justify-content: space-around;
     align-items: center;
     font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
-    background:red;
+    background:pink;
     height: 8vh;
   }
 
